# website

./: Cargo.toml  header.md  template.html
.github/workflows/: deploy.yml
content/: 404.md  cycling.md  index.md  nav.md  reading-list.md  sites-to-revisit.md  tools.md
content/cycling/: bib-ranking.md  rides.md
content/food/: maintaining-sourdough-starter.md
content/food/bread/: guides.md  index.md  recipes.md
content/food/bread/guides/: maintaining-sourdough-starter.md
content/garden/: index.md  reading-list.md
content/garden/cycling/: bib-ranking.md  index.md
content/garden/seeds/: curation.md  index.md  on-documentation.md  public-thinking.md  sites-to-revisit.md
content/garden/software/: index.md  on-documentation.md
content/notes/: brutalist-web-design.md  choose-boring-technology.md  github-composite-actions.md  things-you-should-never-do-part1.md
content/seeds/: curation.md  deploy-first.md  deployment-vs-release.md  existing-tools.md  index.md  lifestyle.md  logical-separation-before-process-separation.md  public-thinking.md
content/software/: articles.md  deployment-vs-release.md  dumb-reads.md  lambda-authorizer-caching.md  logical-separation-before-process-separation.md  on-documentation.md  uow.md  validation.md
content/til/: 2024-09-08-sqlite-atlas-fly.md  index.md
site/: index.html
site/garden/: index.html
src/: main.rs
