[package]
name = "digital-garden"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs_extra = "1.3.0"
handlebars = "5.1.2"
pulldown-cmark = "0.11.0"
regex = "1.10.5"
serde_json = "1.0.118"
walkdir = "2.5.0"
